# trabalhoCG

./: #TeaPot3D.cpp#  CMakeLists.txt  Character.cpp  Character.h  Hero.cpp  Hero.h  LifeBar.cpp  LifeBar.h  Position.cpp  Position.h  README.md  TODO.list  TODO.list~  TeaPot3D.cpp  a.out  example.txt~  example2.txt  example3.txt  gLib.h  game.h  hero.h  main  main.cpp  main.cpp~  makefile  makefile~  objTeste.txt  teste.cpp  teste.txt~  teste3D.cpp  testeOpenGl.cpp  testeScenario.cpp  testeScenario.cpp~  untitled.mtl
Character/: Arm.cpp  Arm.h  Body.cpp  Body.h  Calf.cpp  Calf.h  Character.cpp  Character.h  Head.cpp  Head.h  Thigh.cpp  Thigh.h
Heroes/: Hero.cpp  Hero.h  HumanoidCharacter.cpp  HumanoidCharacter.cpp~  HumanoidCharacter.h
Objs/: Complete.blend  Complete1.blend  arm.blend  body.blend  calf.blend  calf.mtl  diamond.blend  diamond.blend1  fence.blend  fence.txt  head222.blend  scenario.blend  scenario.blend1  thigh.blend  thigh.blend1  thigh.mtl  tower.blend  tower.txt  towerbase.mtl  towerbase.txt  untitled.blend
Scenario/: Base.cpp  Base.cpp~  Base.h  Base.h~  Projectile.cpp  Scenario.cpp  Scenario.cpp~  Scenario.h  Scenario.h~  Scenario2.cpp  Scenario2.h  Tower.cpp  Tower.cpp~  Tower.h  Tower.h~  obj.txt~  sdfsdf.txt
Scenary/: Scenary.h
Util/: ClickArrow.cpp  ClickArrow.h  LifeBar.cpp  LifeBar.h  ObjParser.cpp  ObjParser.cpp~  ObjParser.h  ObjParser.h~  Position.cpp  Position.h  SinCos.cpp  SinCos.h  Texture.cpp  Texture.cpp~  Texture.h  Texture.h~
